chucks-pick3-ws/cloud-formation-rds-template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: MySQL RDS Cloud Formation Template
Resources:
  ChucksPick3RdsVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 192.168.0.0/16
      Tags:
        - Key: Name
          Value: ChucksPick3RdsVpc
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: ChucksPick3RdsVpc
      CidrBlock: 192.168.1.0/24
      AvailabilityZone: "us-east-1a"
      Tags:
        - Key: Name
          Value: PrivateSubnet1
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: ChucksPick3RdsVpc
      CidrBlock: 192.168.2.0/24
      AvailabilityZone: "us-east-1b"
      Tags:
        - Key: Name
          Value: PrivateSubnet2
  RdsDBSubnetGroup:
    Type: "AWS::RDS::DBSubnetGroup"
    Properties:
      DBSubnetGroupDescription: Subnets for RDS
      SubnetIds:
        - Ref: PrivateSubnet1
        - Ref: PrivateSubnet2
      Tags:
        - Key: Name
          Value: RdsDBSubnetGroup
  RdsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow RDS Connections
      VpcId:
        Ref: ChucksPick3RdsVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: RDSSecurityGroup
  RdsDBInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: 20
      AllowMajorVersionUpgrade: false
      AutoMinorVersionUpgrade: false
      BackupRetentionPeriod: 7
      DBInstanceClass: db.t2.micro
      DBInstanceIdentifier: ChucksPick3Rds
      DBName: chuckspick3db
      DBSubnetGroupName:
        Ref: RdsDBSubnetGroup
      Engine: MySQL
      EngineVersion: 5.7.22
      MasterUsername: chuckspick3
      MasterUserPassword: chuckspick3
      MultiAZ: false
      Port: 3306
      PubliclyAccessible: false
      StorageType: gp2
      Tags:
        - Key: Name
          Value: ChucksPick3Rds
      VPCSecurityGroups:
        - Ref: RdsSecurityGroup
